fix: [FFM-1805]: fixing ID container stretch (#7306)

--- a/src/modules/75-cf/components/IdentifierText/IdentifierText.module.scss
+++ b/src/modules/75-cf/components/IdentifierText/IdentifierText.module.scss
@@ -7,6 +7,7 @@
 
 .identifier-container {
   display: flex;
+  width: fit-content;
   background-color: #effbff !important;
   padding: var(--spacing-xsmall) var(--spacing-small) !important;
   border-radius: var(--spacing-xsmall);
